--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -1,5 +1,4 @@
-name: niet gebruiken ivm testfase
-
+name: Release Charts met changelogs
 on:
   workflow_dispatch:
      inputs:
@@ -22,14 +21,6 @@ jobs:
         run: | 
           python -m pip install yq
           
-      - name: Delete existing tag if it exists
-        run: |
-          TAG=${{ github.event.inputs.release_version }}
-          if git rev-parse "$TAG" >/dev/null 2>&1; then
-            git push --delete origin "$TAG"
-            git tag -d "$TAG"
-          fi
-          
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
@@ -39,15 +30,8 @@ jobs:
         run: |
           sed -i "s/^version: .*/version: ${{ github.event.inputs.release_version }}/" charts/podiumd/Chart.yaml
           sed -i "s/^appVersion: .*/appVersion: ${{ github.event.inputs.release_version }}/" charts/podiumd/Chart.yaml
-
-      - name: Get latest release commit hash
-        id: get_release_commit
-        run: |
-          LATEST_RELEASE_COMMIT=$(curl -s https://api.github.com/repos/Dimpact-Samenwerking/helm-charts/releases/latest | jq -r .target_commitish)
-          COMMIT_HASH=${{ env.LATEST_RELEASE_COMMIT }}
-          echo "LATEST_RELEASE_COMMIT=$LATEST_RELEASE_COMMIT" >> $GITHUB_ENV
           
-      - name: Get latest version from HEAD
+      - name: Get latest version of images from podiumd
         id: get_latest_version
         run: |
           OPENZAAK_IMAGE_TAG_LATEST=$(git show -q HEAD:charts/podiumd/values.yaml | yq -r .openzaak.image.tag)
