--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -42,6 +42,10 @@ dependencies:
     version: 1.3.0
     repository: "@maykinmedia"
     condition: objecttypen.enabled
+  - name: openarchiefbeheer
+    version: 1.3.7
+    repository: "@maykinmedia"
+    condition: openarchiefbeheer.enabled
   - name: openklant
     version: 1.5.0
     repository: "@maykinmedia"
