--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -514,7 +514,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "v0.5.0"
+      tag: "v0.5.1-20250107153635-2d5264c"
       pullPolicy: IfNotPresent
     resources:
       requests:
